Peel of RPC invocation InstanceIdentifierContext
Here is a confusing site, which could ned up holding an
InstanceIdentifier, which is not valid. Peel it off.

JIRA: NETCONF-818
Change-Id: I2184afd2d5e750b60b471f7d5d009e038b4b7017
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>